fix image shapes

--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -25,9 +25,6 @@ are in the `description` fields, but this isn't always the case, so I used some 
 tidy that up.
 
 ```
-#
-# From portals.py
-# 
 if is_domain(portal['description']):
     domain = portal['description']
 elif is_domain(portal['name']):
@@ -258,7 +255,7 @@ old datasets and new datasets.
 
 Has dataset size changed over the past couple years?
 
-```{r datasets_size_over_time, fig.height = 10}
+```{r datasets_size_over_time, fig.width = 5}
 base <- ggplot(socrata) + aes(x = createdAt, group = portal, color = portal) +
   geom_point() + scale_y_log10(labels = comma)
 
@@ -269,13 +266,12 @@ print(base + aes(y = nrow * ncol))
 
 
 When did datasets get uploaded?
-```{r datasets_when_uploaded}
+```{r datasets_when_uploaded, fig.width = 5}
 ggplot(socrata) + aes(x = createdAt, group = portal, fill = portal) + geom_bar()
 ```
-{:.wide}
 
 On what days of the week do datasets get uploaded?
-```{r datasets_day_of_week_uploaded}
+```{r datasets_day_of_week_uploaded, fig.width = 5}
 socrata$createdAt.dayOfWeek <- factor(
   strftime(socrata$createdAt, format = '%a'),
   levels = c('Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'))
@@ -283,7 +279,6 @@ ggplot(socrata) + aes(x = createdAt.dayOfWeek, group = portal, fill = portal) +
   geom_bar() + scale_y_continuous('Dataset uploads', labels = comma) +
   scale_x_discrete('Day of the week')
 ```
-{:.wide}
 
 
 ## Future plans
