--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -6,6 +6,7 @@ tags: ['socrata']
 ```{r configure, echo = F}
 opts_chunk$set(fig.width=10, fig.height=5, dpi = 42 * 5)
 ```
+<style>img { width: 70%; margin-left: 15%; margin-right: 15%; }</style>
 
 I downloaded the metadata files for most of the datasets across most of the Socrata data portals.
 Here I explain how I did that and present an summary of the sorts of data that we find in the portals.
@@ -154,7 +155,7 @@ Which portals get the most downloads?
   c(datasets = nrow(df), downloads = sum(df$downloadCount))
 })
 socrata$portal <- factor(socrata$portal,
-  levels = .download$portal[order(.download$downloads, descreasing = T)])
+  levels = .download$portal[order(.download$downloads, decreasing = T)])
 
 ggplot(.download) + aes(x = portal, y = downloads) + geom_point() + coord_flip() +
   scale_y_log10('Number of dataset downloads', labels = comma, breaks = 10^c(2:9)) +
