--- a/r/01-overview.Rmd
+++ b/r/01-overview.Rmd
@@ -189,7 +189,7 @@ the most downloads.
 datasets <- ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount, decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
-print(listify(datasets))
+(listify(datasets))
 ```
 
 Next, let's do the one with the most downloads per time since published.
@@ -198,7 +198,7 @@ Next, let's do the one with the most downloads per time since published.
 datasets <- ddply(socrata, 'portal', function(df) {
   df[order(df$downloadCount / as.numeric(as.Date('2013-07-01') - df$createdAt), decreasing = T)[1],c('id', 'name', 'createdAt', 'downloadCount')]
 })
-print(listify(datasets))
+(listify(datasets))
 ```
 
 
@@ -229,7 +229,7 @@ Some datasets have no rows nor columns. Here are ten of them.
 ```{r deleted}
 deleted <- socrata[(socrata$nrow == 0 & socrata$ncol == 0),]
 set.seed(13984382)
-print(listify(deleted[sample.int(nrow(deleted), 10),]))
+(listify(deleted[sample.int(nrow(deleted), 10),]))
 ```
 
 These appear to be listed as deleted.
