--- a/r/02-geneology.Rmd
+++ b/r/02-geneology.Rmd
@@ -8,6 +8,26 @@ title: Geneology of dataset
 Reference the ScraperWiki post on Twitter, the responses to me from Twitter, ...
 
 
+## Types of duplicate datasets
+
+### Same dataset, linked from same portal
+
+### Same dataset, linked from a different portal
+Same dataset in opendata.socrata.com and a different portal
+
+### Copied rather than elegantly linked
+An example of that
+https://dati.lombardia.it/Cultura/Musei/3syc-54zf?
+
+
+```
+                      portal        id    nrow ncol downloadCount
+7790       dati.lombardia.it 3syc-54zf     234   56          1675
+10425   opendata.socrata.com 54y8-wyde     234   56             9
+```
+
+
+
 ## Metadata schema
 Socrata documents how to search for [data within a dataset](https://opendata.socrata.com/api/docs/),
 and it releases a bunch of examples [on GitHub](https://github.com/socrata). It also has a bunch of
@@ -89,11 +109,17 @@ owner.counts <- ddply(socrata[c('owner.id', 'owner.displayName')], c('owner.id',
 max(owner.counts$n)
 ```
 
+Okay, so owner might tell us something about data portal.
 
-Same dataset in opendata.socrata.com and a different portal
+### Filtered views
+Socrata has a [language for building filters](http://dev.socrata.com/deprecated/querying-datasets).
+These are like SQL views; they are like tables, but they're
+defined as a transformation on an existing table.
 
-```
-                      portal        id    nrow ncol downloadCount
-7790       dati.lombardia.it 3syc-54zf     234   56          1675
-10425   opendata.socrata.com 54y8-wyde     234   56             9
-```
+
+
+
+
+
+
+
