--- a/r/03-schema.Rmd
+++ b/r/03-schema.Rmd
@@ -5,30 +5,6 @@ title: Decoding Socrata's metadata schema:
 
 
 
-Reference the ScraperWiki post on Twitter, the responses to me from Twitter, ...
-
-
-## Types of duplicate datasets
-
-### Same dataset, linked from same portal
-
-### Same dataset, linked from a different portal
-Same dataset in opendata.socrata.com and a different portal
-
-### Copied rather than elegantly linked
-An example of that
-https://dati.lombardia.it/Cultura/Musei/3syc-54zf?
-
-
-```
-                      portal        id    nrow ncol downloadCount
-7790       dati.lombardia.it 3syc-54zf     234   56          1675
-10425   opendata.socrata.com 54y8-wyde     234   56             9
-```
-
-
-
-
 
 Socrata documents how to search for [data within a dataset](https://opendata.socrata.com/api/docs/),
 and it releases a bunch of examples [on GitHub](https://github.com/socrata). It also has a bunch of
@@ -163,4 +139,7 @@ This of course ignores situations where someone downloaded a file
 and then uploaded it as a new dataset. I'll save that possibility
 for another post. :)
 
-## Pretty buttons
+## Talking to Nicole
+I met [Nicole ]() at [OpenOakland]().
+She administrates [Oakland's data portal](), which runs Socrata.
+Talking with her made some things more clear to me.
