--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -9,6 +9,13 @@ The view's metadata files contain two fields related to the people
 who interacted with that view. These fields are the `table
 
 One of the fields that comes with the view metadata files is the 
+`tableAuthor`, and another is the `owner`.
+
+(show examples)
+
+
+
+
 
 
 
