--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -71,10 +71,13 @@ missingness <- data.frame(
   variable = rownames(a),
   present.value = a[,1]
 )
+missingness <- missingness[order(missingness$present.value, decreasing = T),]
 barplot(
-  log10(missingness$present.value),
+  (missingness$present.value),
   names.arg = missingness$variable,
   border = NA, col = 'grey', axes = F, horiz = T, las = 1,
-  xlim = c(0, ceiling(log10(nrow(users))))
+  xlim = c(0, 12000)
 )
-axis(1, at = c(0, 1:4), labels = c(0, 10^(1:4))) 
+axis(1, at = seq(0, 12000, 2000))
+abline(v = nrow(users), col = 2, lty = 2)
+text(x = nrow(users), y = 15, labels = paste(nrow(users), 'total users'), col = 2, pos = 2)
