--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -100,9 +100,17 @@ How many views do people have?
 stripchart(log10(users$n_views), method = 'jitter',
   pch = 21, col = NA, bg = rgb(0,0,0,0.2, max = 1), xlim = c(0,4),
   axes = F, xlab = 'Number of views owned by the user',
-  main = 'Each dot is a user'
+  main = 'Each dot is a user', jitter = 1, ylim = c(0,2)
 )
 axis(1, at = c(0, 1:4), labels = c(0, 10^(1:4)))
+text(x = 0.2, y = 1.2, labels = 'Most users\nhave one view', pos = 4, col = 2)
 ```
+
+Most users (``sum(users$n_views == 1)`` to be exact) have exactly one view.
+Actually, there are probably even more with no views, but I don't have the
+data on them.
+
+That one way off to the side is the Data.gov Program Management Office,
+with ``e8ug-wzay
 
 #### profileLastModified
